<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rotationX="2"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/qq_item" />

        <TextView
            android:id="@+id/qqItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/qq"
            android:textColor="#000000"
            android:textSize="60sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


    <EditText
        android:id="@+id/editQQNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_rounded_rec"
        android:gravity="center"
        android:hint="@string/qqNumHint"
        android:maxLines="1"
        android:minHeight="60dp"
        android:textColor="#000000"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_rounded_rec"
        android:minHeight="60dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/pwd"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/transparent"
            android:foregroundGravity="center"
            android:scaleType="fitCenter"/>
<!--            android:src="" />-->

        <EditText
            android:id="@+id/editQQPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:gravity="center"
            android:hint="输入密码"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            android:maxLines="1"
            android:minHeight="50dp"
            android:textColor="#000000"

            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/readed"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:gravity="center"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/serviceAgreement"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibLogin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_circle_gray"
        android:gravity="center"
        android:paddingStart="28dp"
        android:paddingTop="28dp"
        android:paddingEnd="28dp"
        android:paddingBottom="28dp"
        android:scaleType="fitCenter"
        android:src="@drawable/rightarrow_white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sjhdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:text="@string/sjhdl"
            android:textColor="#000000"
            android:textSize="15sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/G_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text=" | "
            android:textColor="#737171"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/zhmm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zhmm"
            android:textColor="#000000"
            android:textSize="15sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/G_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text=" | "
            android:textColor="#737171"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/xyhzc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/xyhzc"
            android:textColor="#000000"
            android:textSize="15sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</LinearLayout>